--- a/client/src/containers/ManagerTagSkill/ManagerTagSkill.scss
+++ b/client/src/containers/ManagerTagSkill/ManagerTagSkill.scss
@@ -8,7 +8,7 @@
   &__table {
     .link {
       transition: 0.2s;
-      // background-color: transparent !important;
+      background-color: transparent !important;
 
       &__edit {
         color: $color-7 !important;
